<resources>
    <string name="app_name">Get API Github Lesson</string>
    <string name="item_name">A.Wahab Hasbullah</string>
    <string name="content_decs">Tokoh kemerdekaan, Tokoh Islam, salah seorang pendiri NU (Nahdlatul Ulama). Ketua Tim Komite Hijaz. Pendiri harian umum Soeara Nahdlatul Oelama (NO) dan Berita Nahdlatul Ulama. Pendiri Organisasi Pemuda Islam bernama Nahdlatul Wathan (Kebangkitan Tanah Air). Panglima Laskar Mujahidin (Hizbullah) ketika melawan penjajah Jepang. Pelopor kebebasan dalam keberagamaan terutama kebebasan berpikir dan berpendapat di kalangan Umat Islam Indonesia. Inspirator Gerakan Pemuda Ansor. Rais Am NU.KH Abdul Wahab Hasbullah adalah seorang ulama yang berpandangan modern, dakwahnya dimulai dengan mendirikan surat kabar, yaitu harian umum “Soeara Nahdlatul Oelama” atau Soeara NO dan Berita Nahdlatul Ulama. Beliau bersama dengan KH Hasyim Asy\'ari menghimpun tokoh pesantren dan keduanya mendirikan Nahdlatul Ulama (Kebangkitan Ulama) pada tahun 1926. Kiai Wahab juga berperan membentuk Majelis Syuro Muslimin Indonesia (Masyumi). Pada masa perjuangan mempertahankan kemerdekaan, Kiai Wahab bersama Hasyim Asy\'ari dari Jombang dan Kiai Abbas dari Cirebon merumuskan Resolusi Jihad sebagai dukungan terhadap perjuangan kemerdekaan.Kyai Wahab pernah menjadi Ketua Tim Komite Hijaz. Beliau juga sebagai pendiri Organisasi Pemuda Islam bernama Nahdlatul Wathan (Kebangkitan Tanah Air), pernah sebagai Panglima Laskar Mujahidin (Hizbullah) ketika melawan penjajah Jepang. Kyai Wahab Hasbullah adalah pelopor kebebasan berpikir di kalangan Umat Islam Indonesia. Beliau merupakan seorang ulama yang menekankan pentingnya kebebasan dalam keberagamaan terutama kebebasan berpikir dan berpendapat. Salah satunya dengan membentuk kelompok diskusi Tashwirul Afkar (Pergolakan Pemikiran) di Surabaya.Sesudah Hasyim Asy\'ari meninggal dunia, Kiai Wahab menjadi Rais Am NU. Beliau meningkatkan dukungan NU kepada Pemerintah Indonesia dalam memenangi perang melawan Pemerintah Belanda. Belau meninggal di Jombang 29 Desember 1971 pada umur 83 tahun, dan dimakamkan di Pondok Pesantren Tambak Beras Jombang Jawa timur.</string>
    <string name="domicile_content">Sumatera Utara</string>
    <string name="age_content">21</string>
    <string name="content_lahir">Selasa, 3 Desember 1918 di Kotanopan, Mandailing Natal, Sumatera Utara</string>
    <string name="gugur_content">Selasa Wage, 5 September 2000 di Jakarta, Indonesia</string>
    <string name="Data_json">Display Data From JSON</string>
    <string name="ListUser">Display Data List Users From API Github</string>
    <string name="UserSearch">Display Users search From API Github</string>
    <string name="DataRepoGithub">Display Repository Git From API Github</string>
    <string name="item_name_git">errfree</string>
    <string name="text_total_count">total count</string>
    <string name="full_nameRepo">john/hamburgers</string>
    <string name="repo_name">hamburgers</string>
    <string name="createdRepo">2016–02–27:02:16:24Z</string>
    <string name="UpdateAt">2016–02–27:02:16:24Z</string>
    <string name="PushAt">2016–02–27T02:16:24Z</string>
    <string name="lokasi_makam">Lokasi Makam :</string>
    <string name="name">name :</string>
    <string name="asal">Asal :</string>
    <string name="lahir">Lahir :</string>
    <string name="usia">Usia :</string>
    <string name="gugur">Gugur :</string>
</resources>