<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="ui.MainActivity">

    <Button
        android:id="@+id/btnRvJson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Data_json"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnRvListUsers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ListUser"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnRvSearchUsers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/UserSearch"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btnRvRepo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DataRepoGithub"
        android:textAllCaps="false"/>

</androidx.appcompat.widget.LinearLayoutCompat>