<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imgFile"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:src="@drawable/ic_file"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNameRepo"
        style="@style/TextAppearance.Title"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/repo_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgFile"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFullRepo"
        style="@style/TextAppearance.Subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/full_nameRepo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgFile"
        app:layout_constraintTop_toBottomOf="@+id/tvNameRepo" />

    <TextView
        android:id="@+id/tvvDescRepo"
        style="@style/TextAppearance.Old"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="15dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="lorem impus"
        app:layout_constraintTop_toBottomOf="@id/imgFile" />

    <LinearLayout
        android:id="@+id/llView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@id/tvvDescRepo">

        <TextView
            android:id="@+id/tvCreatedAt"
            style="@style/TextAppearance.Domicile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createdRepo" />

        <TextView
            android:id="@+id/tvUpdate"
            style="@style/TextAppearance.Domicile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:text="@string/UpdateAt" />

    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        app:dividerColor="#7C2B2B2B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llView" />

</androidx.constraintlayout.widget.ConstraintLayout>